简单的txt翻页阅读

--- a/app/src/main/res/layout/view_new.xml
+++ b/app/src/main/res/layout/view_new.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="horizontal" >
 
-    <com.example.testscroll.view.ReadView
+    <com.example.administrator.myapplication.view.ReadView
         android:id="@+id/textview"
         android:layout_width="0dp"
         android:layout_height="match_parent"
